2010-03-07  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13783: Content Element Preview Should Show CType Label (Thanks to Jeff Segars)
	* Fixed bug: #13052: New Content Element Wizard didn't load (Thanks to Jan Perdoch)

2010-03-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13776: Cannot unset HSC for input type Plain Input Field
	* Fixed bug: #13764: Changing eType in mapping module remains HSC=1

2010-03-07  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #11912: usergroup options for disabling the "paste as reference"-Function, when copying a FCE
	* Fixed bug: #13725: [pre-1.4.2] JavaScript errors when opening page module (in TYPO3 4.2)
	* Fixed bug: #13756: Clicking the configuration tabs in mapping module scrolls windows
	* Fixed bug: #13755: t3lib_BEfunc::getSetUpdateSignal() will be deprecated in TYPO3 4.5 (patch a)
	* Fixed bug: #13762: Elements on New page -templateselector don't indicate clickability

2010-03-06  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #4931: SQL error with Templavoila/DBAL/PostgreSQL: Different language (Thanks to Mathias and Xavier)

2010-02-27  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #12257: localizable ds/to title fields

2010-02-23  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13594: Fatal error: Cannot use string offset as an array in class.tx_templavoila_pi1.php on line 509 

2010-02-22  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug: #13607: SelIcons for DS/TO are all rendered in one row

2010-02-22  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13587: Selecting of template object in content element
	* Fixed bug: #13606: BLOB is too small for large mappings

2010-02-13  Tolleiv Nietsch <nietsch@aoemedia.de> 

	* Fixed bug: #13165: improve flexform reference-lists and workspace behaviour	
	* Fixed bug: #13533: DS/TO selectbox can't handle static datastructures from extensions.
	* Fixed bug: #13527: Typoscript default should be better with Templavoila
